<resources>
    <string name="app_name">DartLife</string>
    <string name="dartlife">DartLife</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="book">Book</string>
    <string name="movie">Movie</string>
    <string name="entertainment">Entertainment</string>
    <string name="food">Food</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post">POST</string>
    <string name="change">CHANGE</string>
    <string name="title">Title</string>
    <string name="comment">Comment</string>
    <string name="date">Date</string>
    <string name="starttime">Time</string>
    <string name="foodimage">FoodImage</string>
    <string name="name">Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="phone">Phone</string>
    <string name="major">Major</string>
    <string name="dartmouth_class">Dartmouth Class</string>
    <string name="email">Email</string>
    <string name="entertainmentpic">EntertainmentPic</string>
    <string name="add">Add</string>
    <string name="entertainmenttype">EntertainmentType</string>
    <string name="sports">Sports</string>
    <string name="dramas">Dramas</string>
    <string name="save">SAVE</string>
    <string name="dob">DOB</string>
    <string name="uid">UID</string>
    <string name="drama">Drama</string>
    <string name="start_date">Start Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="end_date">End Date</string>
    <string name="description">Description</string>
</resources>
