<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_color_background"
    tools:context=".activity.LoginActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:text="@string/dartlife"
        android:textColor="#FFFFFF"
        android:textSize="60sp" />

    <LinearLayout
        android:layout_width="250dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="90dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/round_edge">

    <android.support.design.widget.TextInputLayout
            android:id="@+id/EmailTextInputLayout"
            android:layout_width="200dp"
            android:layout_margin="20dp"
            android:layout_height="wrap_content"
            android:textColorHint="#03D1BB"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/EmailTextInputEdit"
                android:drawableStart="@drawable/baseline_account_box_black_18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/PasswordTextInputLayout"
            android:layout_width="200dp"
            android:layout_margin="20dp"
            android:layout_height="wrap_content"
            android:textColorHint="#03D1BB"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/PasswordTextInputEdit"
                android:drawableStart="@drawable/baseline_lock_black_18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/RegisterButton"
        android:layout_width="200dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="110dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:background="@drawable/round_edge"/>

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="200dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="110dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:background="@drawable/round_edge"/>

</LinearLayout>
