<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.FreeFoodActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/EntertainmentImageView"
                android:layout_width="144dp"
                android:layout_height="135dp"
                android:layout_margin="70dp"
                app:srcCompat="@mipmap/ic_launcher"
                tools:ignore="ContentDescription" />

            <Button
                android:id="@+id/ChangeEntertainmentBtn"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:layout_marginTop="125dp"
                android:text="@string/change" />
        </LinearLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/EntertainmentTitleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"/>
        </android.support.design.widget.TextInputLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/entertainmenttype"
            android:id="@+id/entertainment1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:id="@+id/EntertainmentTypeView"
            android:layout_below="@+id/entertainment1"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBlack" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/startdate1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/start_date"
                android:layout_alignParentTop="true"/>
            <TextView
                android:id="@+id/EntertainmentStartDateView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="aaa"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_below="@id/startdate1"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBlack" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/starttime1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_time"
                android:textSize="20sp"
                android:layout_alignParentTop="true"/>
            <TextView
                android:id="@+id/EntertainmentStartTimeView"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="aaa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/starttime1"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBlack" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/enddate1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/end_date"
                android:layout_alignParentTop="true"/>
            <TextView
                android:id="@+id/EntertainmentEndDateView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="aaa"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_below="@id/enddate1"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBlack" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/endtime1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/end_time"
                android:textSize="20sp"
                android:layout_alignParentTop="true"/>
            <TextView
                android:id="@+id/EntertainmentEndTimeView"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="aaa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/endtime1"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBlack" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/comment1"
                android:text="@string/description"
                android:textSize="20sp"
                android:layout_alignParentTop="true"/>
            <EditText
                android:id="@+id/EntertainmentCommentEditText"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@drawable/comment_box"
                android:gravity="top|left"
                android:layout_below="@id/comment1"
                android:inputType="textMultiLine"
                tools:ignore="LabelFor" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>